Required Java version downgraded to Java 17.