@@ -46,15 +46,19 @@ public final class Viztool {
     }
 
     private static @NotNull String getLabel(@NotNull List<Node> parseRes) {
-        final @NotNull Node fpr = parseRes.getFirst();
-        final @NotNull var label = switch (fpr) {
-            case Node.NodeString nodeString -> nodeString.content();
-            case Node.NodeTreeTag nodeTreeTag -> nodeTreeTag.content().name();
-            case Node.NodeFail ignored1 ->
-                    throw new IllegalStateException("Cannot create parse-tree visualization for " + fpr + " (TODO).");
-            case Node.NodeParseTree ignored2 ->
-                    throw new IllegalStateException("This case should be handled in dumpParseTreeHelp.");
-        };
+        final @NotNull Node fpr = parseRes.get(0);
+        final @NotNull String label;
+        if (fpr instanceof Node.NodeString) {
+            label = ((Node.NodeString)fpr).content();
+        }else if (fpr instanceof Node.NodeTreeTag) {
+            label = ((Node.NodeTreeTag)fpr).content().name();
+        }else if (fpr instanceof Node.NodeFail) {
+            throw new IllegalStateException("Cannot create parse-tree visualization for " + fpr + " (TODO).");
+    }else if (fpr instanceof Node.NodeParseTree) {
+        throw new IllegalStateException("This case should be handled in dumpParseTreeHelp.");
+    } else  {
+            throw new IllegalStateException(fpr.getClass().getName());
+        }
         return label.replace("\\", "\\\\").replace("\"", "\\\"");
     }
 
